--- a/src/app/todo-item/todo-item.component.html
+++ b/src/app/todo-item/todo-item.component.html
@@ -1,13 +1,17 @@
 <div class="view">
-  <input 	class			= "toggle"
+  <input 	class			= "toggle ng-pristine ng-untouched ng-valid"
           type			= "checkbox"
           name			= "fait"
+          [ngModel] = "data.isDone"
+          (ngModelChange)="itemDone(data, $event)"
   />
-  <label 	class="texte"></label>
-  <button class="destroy"></button>
+  <label 	class="texte" *ngIf="!data.voirEdit" (dblclick)="voirEdit = true">{{label}}</label>
+  <button class="destroy" (click)="removeItem()"></button>
 </div>
-<form>
+<form *ngIf="voirEdit" (submit)="label=newTextInput.value">
   <input  #newTextInput
           name    = "newTextInput"
-          class   = "edit"/>
+          class   = "edit"
+          [ngModel]="label"
+          (blur)="label=newTextInput.value"/>
 </form>
