--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,7 +1,7 @@
 <section class="todoapp">
   <header class="header">
     <h1>{{titre}}</h1>
-    <form>
+    <form (submit)="appendItem( newTodoInput.value); newTodoInput.value=''">
       <input  #newTodoInput
               name        = "newTodoInput"
               class       = "new-todo"
@@ -13,12 +13,19 @@
     <input  class="toggle-all"
             type="checkbox"
             name="toggleAll"
+            [ngModel]="isAllDone()"
+            (ngModelChange)="toggleAllDone()"
     />
     <ul class="todo-list">
+        <li  *ngFor="let item of items" [class.editing]="itemCompo.voirEdit" [class.completed]="item.isDone">
+        <app-todo-item #itemCompo [data]="item"></app-todo-item>
+        </li>
     </ul>
   </section>
+
+
   <footer class="footer">
-    <span class="todo-count"><strong></strong> restantes</span>
+    <span class="todo-count" ><strong></strong> restantes</span>
     <ul class="filters">
       <li>
         <a class="filterAll">Tous</a>
@@ -30,7 +37,7 @@
         <a class="filterCompleted">Complétés</a>
       </li>
     </ul>
-    <button class="clear-completed">Supprimer cochées</button>
+    <button class="clear-completed" (click)="clearCompletedTodos()">Supprimer cochées</button>
   </footer>
 </section>
 <hr/>
