--- a/src/app/todo-list/todo-list.component.css
+++ b/src/app/todo-list/todo-list.component.css
@@ -21,14 +21,11 @@ div.editing .viewTitre {
     display: none;
   }
 
-.delete-all {
+.icones {
     position: absolute;
-    top: -55px;
-    right: 12px;
-    height: 28px;
-    width: 24px;
-    margin: auto;
+    top: 0px;
+    right: -50px;
+    width: 35px;
     border: none; /* Mobile Safari */
     padding: 10px;
 }
-  
