title describing action of icon

--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -33,9 +33,9 @@
   </section>
 
   <div class="icones">
-      <fa-icon class="delete-all" size="2x" [icon]="faTrashAlt" (click)="deleteAllItems()"></fa-icon>
-      <fa-icon [icon]="faUndo" size="2x" (click)="undo()"></fa-icon>
-      <fa-icon [icon]="faRedo" size="2x" (click)="redo()"></fa-icon>
+      <fa-icon class="delete-all" title="Supprimer tout" size="2x" [icon]="faTrashAlt" (click)="deleteAllItems()"></fa-icon>
+      <fa-icon [icon]="faUndo" title="Undo" size="2x" (click)="undo()"></fa-icon>
+      <fa-icon [icon]="faRedo" title="Redo" size="2x" (click)="redo()"></fa-icon>
   </div>
 
   <footer class="footer">
